--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
-    "ethereumjs-util": "^5.2.0",
-    "openzeppelin-solidity": "^1.12.0"
+    "dotenv-safe": "^6.0.0",
+    "ethereumjs-wallet": "^0.6.2",
+    "openzeppelin-solidity": "^1.12.0",
+    "truffle-wallet-provider": "^0.0.5",
+    "web3": "^1.0.0-beta.36"
   }
 }
