--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "dotenv-safe": "^6.0.0",
+    "dotenv": "^6.0.0",
     "ethereumjs-wallet": "^0.6.2",
     "openzeppelin-solidity": "^1.12.0",
     "truffle-wallet-provider": "^0.0.5",
