[test] Adding solidity-coverage as a dev dependency #15

--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "openzeppelin-solidity": "^1.12.0",
     "truffle-wallet-provider": "^0.0.5",
     "web3": "^1.0.0-beta.36"
+  },
+  "devDependencies": {
+    "solidity-coverage": "^0.5.11"
   }
 }
