--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "dotenv": "^6.0.0",
     "ethereumjs-wallet": "^0.6.2",
     "openzeppelin-solidity": "^1.12.0",
-    "truffle-wallet-provider": "^0.0.5",
+    "truffle-hdwallet-provider": "^0.0.7-beta.1",
     "web3": "^1.0.0-beta.36"
   },
   "devDependencies": {
