--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "dependencies": {
+    "bip39": "^2.5.0",
     "dotenv": "^6.0.0",
     "ethereumjs-wallet": "^0.6.2",
     "openzeppelin-solidity": "^1.12.0",
-    "truffle-hdwallet-provider": "^0.0.7-beta.1",
+    "truffle-hdwallet-provider": "^1.0.0-web3one.2",[
     "web3": "^1.0.0-beta.36"
   },
   "devDependencies": {
