--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "dotenv": "^6.0.0",
     "ethereumjs-wallet": "^0.6.2",
     "openzeppelin-solidity": "^1.12.0",
-    "truffle-hdwallet-provider": "^1.0.0-web3one.2",[
+    "truffle-hdwallet-provider": "^1.0.0-web3one.2",
     "web3": "^1.0.0-beta.36"
   },
   "devDependencies": {
