--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "web3": "^1.0.0-beta.36"
   },
   "devDependencies": {
-    "solidity-coverage": "^0.5.11"
+    "solidity-coverage": "^0.5.11",
+    "truffle": "4.1.14"
   }
 }
