[test] increasing branch coverage #19

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@smartdec/smartcheck": "^2.0.1",
     "solidity-coverage": "^0.5.11",
-    "truffle": "4.1.14"
+    "truffle": "4.1.14",
+    "truffle-assertions": "^0.9.1"
   }
 }
