--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "version": "0.9.5",
   "version": "1.0.0",
+  "license": "Apache-2.0",
   "dependencies": {
     "bip39": "^2.5.0",
     "dotenv": "^6.0.0",
