[build] updating travis to redirect ganache to /dev/null

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,10 @@ jobs:
     - stage: "Compile"
       script: make compile
     - stage: "Migrate"
-      before_script: npx ganache-cli -p 9545 start &
+      before_script: npx ganache-cli -p 9545 start > /dev/null &
       script: npx truffle migrate --reset --network development
     - stage: "Tests"
-      before_script: npx ganache-cli -p 9545 start &
+      before_script: npx ganache-cli -p 9545 start > /dev/null &
       script: npx truffle test --network development
     - stage: "Coverage"
       script: make coverage
