--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "version": "1.0.2",
   "license": "Apache-2.0",
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "bip39": "^2.5.0",
     "dotenv": "^6.0.0",
     "ethereumjs-wallet": "^0.6.2",
     "openzeppelin-solidity": "^1.12.0",
     "truffle-hdwallet-provider": "^1.0.0-web3one.2",
+    "truffle-ledger-provider": "^1.0.1",
     "web3": "^1.0.0-beta.36"
   },
   "devDependencies": {
