[fix] adding a 5 second delay before tests start

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ jobs:
         - npx truffle migrate --reset --network development
     - stage: "Tests"
       before_script: npx ganache-cli -p 9545 start > /dev/null &
-      script: npx truffle test --network development
+      script: 
+        - sleep 5
+        - npx truffle test --network development
     - stage: "Coverage"
       script: make coverage
