--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dotenv": "^6.0.0",
     "ethereumjs-wallet": "^0.6.2",
     "openzeppelin-solidity": "^1.12.0",
+    "@openzeppelin/contracts": "^4.4.2",
     "truffle-hdwallet-provider": "^1.0.0-web3one.2",
     "truffle-ledger-provider": "^1.0.1",
     "web3": "^1.0.0-beta.36"
