--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@smartdec/smartcheck": "^2.0.1",
     "solidity-coverage": "^0.7.19",
     "truffle": "^5.4.33",
-    "truffle-assertions": "^0.9.2"
+    "truffle-assertions": "^0.9.2",
+    "truffle-plugin-verify": "^0.5.21"
   }
 }
