--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@smartdec/smartcheck": "^2.0.1",
+    "eth-gas-reporter": "^0.2.24",
     "solidity-coverage": "^0.7.19",
     "truffle": "^5.4.33",
     "truffle-assertions": "^0.9.2",
