--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "solidity-coverage": "^0.7.20",
     "truffle": "^5.4.33",
     "truffle-assertions": "^0.9.2",
-    "truffle-plugin-verify": "^0.5.21"
+    "truffle-plugin-verify": "^0.5.21",
+    "ganache-cli": "6.12.2"
   }
 }
