--- a/.github/workflows/makefileCi.yml
+++ b/.github/workflows/makefileCi.yml
@@ -9,6 +9,13 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Setup NodeJS 16
+      uses: actions/setup-node@v2
+      with:
+        node-version: 16.x
+    - name: Show NodeJS version
+      run: npm --version
+
     - name: Install dependencies
       run: yarn install
 
