feat(CI): launch and stop ganache instance for ci test

--- a/.github/workflows/makefileCi.yml
+++ b/.github/workflows/makefileCi.yml
@@ -14,10 +14,10 @@ jobs:
       with:
         node-version: 16.x
     - name: Show NodeJS version
-      run: npm --version
+      run: node --v
 
     - name: Install dependencies
       run: yarn install
 
     - name: Run test
-      run: make test
+      run: make ci-test
