feat(CI): correct typo in workflow action yml

--- a/.github/workflows/makefileCi.yml
+++ b/.github/workflows/makefileCi.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         node-version: 16.x
     - name: Show NodeJS version
-      run: node --v
+      run: node -v
 
     - name: Install dependencies
       run: yarn install
