--- a/.github/workflows/coverageOnPR.yml
+++ b/.github/workflows/coverageOnPR.yml
@@ -1,6 +1,6 @@
-name: Test on Push
+name: Coverage On Pull-Request
 
-on: [push]
+on: [pull_request]
 
 jobs:
   build:
@@ -19,5 +19,5 @@ jobs:
     - name: Install dependencies
       run: yarn install
 
-    - name: Run test
-      run: make ci-test
+    - name: Run coverage
+      run: make coverage
