feat(CI-SLACK): add slack notification if tests crash

--- a/.github/workflows/testOnPush.yml
+++ b/.github/workflows/testOnPush.yml
@@ -3,7 +3,7 @@ name: Test on Push
 on: [push]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -21,3 +21,25 @@ jobs:
 
     - name: Run test
       run: make ci-test
+
+  notify:
+    name: Notify Slack on failure
+    needs: [test]
+    if: ${{ failure() }}
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: envsubst
+      uses: mshick/fast-envsubst@v1
+      with:
+        in-file: .github/slack/failed.json
+        out-file: payload.json
+
+    - name: Send slack message
+      env:
+        TOKEN: ${{ secrets.SLACK_TOKEN }}
+      run: |
+        curl -H "Authorization: Bearer $TOKEN" -H "Content-type: application/json" -d @payload.json -XPOST https://slack.com/api/chat.postMessage
