--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "devDependencies": {
     "@smartdec/smartcheck": "^2.0.1",
     "eth-gas-reporter": "^0.2.24",
+    "ganache-cli": "6.12.2",
+    "prettier": "^2.8.7",
+    "prettier-plugin-solidity": "^1.1.3",
     "solidity-coverage": "^0.7.20",
     "truffle": "^5.5.5",
     "truffle-assertions": "^0.9.2",
-    "truffle-plugin-verify": "^0.6.1",
-    "ganache-cli": "6.12.2"
+    "truffle-plugin-verify": "^0.6.1"
   }
 }
