Feat/60 bytearray signature (#65)
* feat(MintableController): Creating new BurnFromBytes to accept any-length signature; deprecating BurnFrom used in polygonBridgeFrontend; deprecating burnFrom_withCaller for burnFromBytes

* feat(script): adding getters and setters script for mintable controller and systemRole

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "version": "1.1.1",
   "license": "Apache-2.0",
   "dependencies": {
+    "@chainsafe/truffle-plugin-abigen": "^0.0.2",
     "@openzeppelin/contracts": "^4.4.2",
     "@truffle/hdwallet-provider": "^2.1.1",
     "web3": "^1.8.1"
