Feat/75 permit erc2612 no upgrade (#69)
* feat(permit): adding test for permit

* feat(permit): adding tests for permit edge case

--- a/package.json
+++ b/package.json
@@ -3,8 +3,17 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@chainsafe/truffle-plugin-abigen": "^0.0.2",
+    "@ethersproject/abi": "^5.7.0",
+    "@ethersproject/bignumber": "^5.7.0",
+    "@ethersproject/keccak256": "^5.7.0",
+    "@ethersproject/signing-key": "^5.7.0",
+    "@ethersproject/solidity": "^5.7.0",
+    "@ethersproject/strings": "^5.7.0",
     "@openzeppelin/contracts": "^4.4.2",
     "@truffle/hdwallet-provider": "^2.1.1",
+    "ethers": "^6.7.1",
+    "evm-bn": "^1.1.2",
+    "evm-fp": "^1.2.0",
     "web3": "^1.8.1"
   },
   "devDependencies": {
