--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "version": "1.1.1",
   "license": "Apache-2.0",
+  "scripts": {
+    "verify-files": "bash scripts/verify-files.sh"
+  },
   "dependencies": {
     "@chainsafe/truffle-plugin-abigen": "^0.0.2",
     "@ethersproject/abi": "^5.7.0",
@@ -25,6 +28,7 @@
     "solidity-coverage": "^0.7.20",
     "truffle": "^5.5.5",
     "truffle-assertions": "^0.9.2",
+    "truffle-flattener": "^1.6.0",
     "truffle-plugin-verify": "^0.6.1"
   }
 }
