feat(burnFrom): adding empty sig security and test

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ethers": "^6.7.1",
     "evm-bn": "^1.1.2",
     "evm-fp": "^1.2.0",
+    "keythereum": "^2.0.0",
     "web3": "^1.8.1"
   },
   "devDependencies": {
