feat(ERC2612+ERC1271): adding permit function and helper ; removing signature points from burn function in favor of a byte array

--- a/package.json
+++ b/package.json
@@ -1,9 +1,23 @@
 {
   "version": "1.1.1",
   "license": "Apache-2.0",
+  "scripts": {
+    "verify-files": "bash scripts/verify-files.sh"
+  },
   "dependencies": {
+    "@chainsafe/truffle-plugin-abigen": "^0.0.2",
+    "@ethersproject/abi": "^5.7.0",
+    "@ethersproject/bignumber": "^5.7.0",
+    "@ethersproject/keccak256": "^5.7.0",
+    "@ethersproject/signing-key": "^5.7.0",
+    "@ethersproject/solidity": "^5.7.0",
+    "@ethersproject/strings": "^5.7.0",
     "@openzeppelin/contracts": "^4.4.2",
     "@truffle/hdwallet-provider": "^2.1.1",
+    "ethers": "^6.7.1",
+    "evm-bn": "^1.1.2",
+    "evm-fp": "^1.2.0",
+    "keythereum": "^2.0.0",
     "web3": "^1.8.1"
   },
   "devDependencies": {
@@ -15,6 +29,7 @@
     "solidity-coverage": "^0.7.20",
     "truffle": "^5.5.5",
     "truffle-assertions": "^0.9.2",
+    "truffle-flattener": "^1.6.0",
     "truffle-plugin-verify": "^0.6.1"
   }
 }
