feat(script): replacing etherscan api into homemade script

--- a/package.json
+++ b/package.json
@@ -45,11 +45,12 @@
     "@typechain/hardhat": "^8.0.0",
     "@types/chai": "^4.2.0",
     "@types/mocha": ">=9.1.0",
+    "bignumber.js": "^9.1.2",
     "chai": "^4.2.0",
     "solidity-coverage": "^0.8.1",
     "ts-node": "^10.9.2",
     "typechain": "^8.2.0",
     "typescript": "^5.4.3",
-    "web3": "1.8.1"
+    "web3": "^4.7.0"
   }
 }
