feat(task): adding taskfile for token opperation

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,26 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
+# Environment files (containing keys and private data)
+.env
+.env.*
+!.env.template
+
+# Cache and build artifacts
+cache/
+out/
+forge-cache/
+node_modules/
+
+# IDE files
+.vscode/
+.idea/
+*.sublime-*
+
+# OS files
+.DS_Store
+Thumbs.db
+
 # lcov reports
 lcov.info
 report/
