feat(task:money): adding full money sol script and task interaction

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -21,12 +21,12 @@ tasks:
       - cmd: |
           printf "🚀 Stablecoin Management System\n\n"
           printf "Available categories:\n"
-          printf "  deploy   - Deployment commands     (task deploy help)\n"
-          printf "  token    - Token operations        (task token help)\n\n"
+          printf "  deploy   - Deployment commands     (task deploy)\n"
+          printf "  token    - Token operations        (task token)\n\n"
           printf "Common commands:\n"
           printf "  task deploy NETWORK=sepolia # Deploy all tokens\n"
-          printf "  task token owner ADDRESS=0x123... # Check owner\n"
-          printf "  task token balance ADDRESS=0x123... ACCOUNT=0x456... # Check balance\n\n"
+          printf "  task token:owner ADDRESS=0x123... # Check owner\n"
+          printf "  task token:balance ADDRESS=0x123... ACCOUNT=0x456... # Check balance\n\n"
           printf "Run 'task --list' to see all available tasks\n"
         silent: true
   # Informational tasks
