--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -19,7 +19,7 @@ tasks:
     desc: Show available task categories
     cmds:
       - cmd: |
-          printf "🚀 Stablecoin Management System\n\n"
+          printf "🚀 Monerium Token Management System\n\n"
           printf "Available categories:\n"
           printf "  deploy   - Deployment commands     (task deploy)\n"
           printf "  token    - Token operations        (task token)\n\n"
