feat(script:deploy): adding network.yml read and adapt the verify configuration

--- a/.env.template
+++ b/.env.template
@@ -39,8 +39,8 @@ LOCALHOST_RPC=http://localhost:8545
 # ====== API KEYS ======
 ETHERSCAN_API_KEY=
 ARBISCAN_API_KEY=
-OPTIMISM_API_KEY=
-SNOWTRACE_API_KEY=
+OPTISCAN_API_KEY=
+SNOWTRACESCAN_API_KEY=
 GNOSISSCAN_API_KEY=
 POLYGONSCAN_API_KEY=
 LINEASCAN_API_KEY=
